@@ -3081,7 +3081,10 @@ namespace RTI
         {
             // Wake up the thread to process data
             _continue = false;
-            _eventWaitData.Set();
+            if (!_eventWaitData.SafeWaitHandle.IsClosed)
+            {
+                _eventWaitData.Set();
+            }
         }
 
         #region Database
@@ -3138,10 +3141,13 @@ namespace RTI
 
             //if ((++_displayCounter % 5) == 0)
             //{
-                // Wake up the thread to process data
+            // Wake up the thread to process data
+            if (!_eventWaitData.SafeWaitHandle.IsClosed)
+            {
                 _eventWaitData.Set();
+            }
 
-                //_displayCounter = 0;
+            //_displayCounter = 0;
             //}
         }
 
