@@ -2635,7 +2635,10 @@ namespace RTI
 
             // Wake up the thread to process data
             _continue = false;
-            _eventWaitData.Set();
+            if (!_eventWaitData.SafeWaitHandle.IsClosed)
+            {
+                _eventWaitData.Set();
+            }
 
             TextEnsembleVM.Dispose();
         }
@@ -2654,10 +2657,13 @@ namespace RTI
             // Limit how often the dsiplay updates
             //if ((++_displayCounter % 5) == 0)
             //{
-                // Wake up the thread to process data
+            // Wake up the thread to process data
+            if (!_eventWaitData.SafeWaitHandle.IsClosed)
+            {
                 _eventWaitData.Set();
+            }
 
-                //_displayCounter = 0;
+            //_displayCounter = 0;
             //}
         }
 
