@@ -1,5 +1,9 @@
 ﻿Pulse Changelog
 
+Pulse-4.12.1
+ * In HeatmapPlotViewModel, fixed InterPlote flag to only change HeatmapPlotSeries.
+ * Check _eventWaitData is closed for calling set. 
+
 Pulse-4.12.0
  * In AdcpConfigurationViewModel, pass the deployment duration based off the number of configurations.
  * Changed Deployment Duration from an UInt to a double.
